--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "parcel"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "webfontloader": "^1.6.28"
   },
   "sass": {
     "includePaths": [
