--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "parcel"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +21,7 @@
     "parcel": "^2.1.1"
   },
   "source": [
+    "src/index.html",
     "src/index.js"
   ]
 }
