--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-scroll-area": "^0.1.3",
     "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
