--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean; parcel build",
-    "start": "parcel"
+    "start": "npm run clean; parcel"
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-scroll-area": "^0.1.3",
+    "@radix-ui/react-switch": "^0.1.4",
     "@radix-ui/react-tabs": "^0.1.4",
     "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
