--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^0.1.5",
+    "@radix-ui/react-dropdown-menu": "^0.1.4",
+    "@radix-ui/react-label": "^0.1.4",
     "@radix-ui/react-scroll-area": "^0.1.3",
     "@radix-ui/react-switch": "^0.1.4",
     "@radix-ui/react-tabs": "^0.1.4",
     "@stitches/react": "^1.2.6",
+    "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webfontloader": "^1.6.28"
